# python-sdk/src/intellioptics/generated/openapi/models/detector_create_mode.py
@@ -1,9 +1,0 @@
-from enum import Enum
-
-class DetectorCreateMode(str, Enum):
-    BINARY = "binary"
-    COUNT = "count"
-    CUSTOM = "custom"
-
-    def __str__(self) -> str:
-        return str(self.value)
