# python-sdk/src/intellioptics/generated/openapi/models/detector_out_mode.py
@@ -1,9 +1,0 @@
-from enum import Enum
-
-class DetectorOutMode(str, Enum):
-    BINARY = "binary"
-    COUNT = "count"
-    CUSTOM = "custom"
-
-    def __str__(self) -> str:
-        return str(self.value)
